# Egocentric_Data_capture_Hardware_mono16

./: .gitattributes  .gitignore  MERGE_NOTES.md  README.md  capture-daemon.service  capture_daemon.py  log.txt  polling-agent.service  polling_agent.py  requirements.txt  setup-services.sh  setup.sh  setup_mcap_sdk.sh
Egocentric_Data_capture_Hardware_mono16/: CHANGES.md  capture-daemon.service  capture_daemon.py  polling-agent.service  test_existing_buzzer.py
Egocentric_Data_capture_Hardware_mono16/capture/: config.py  gpio_controller.py
Egocentric_Data_capture_Hardware_mono16/capture/cameras/: fov_check.py  kreo.py  orbbec.py
Egocentric_Data_capture_Hardware_mono16/capture/pipeline/: session_v2.py  uploader.py
Egocentric_Data_capture_Hardware_mono16/capture/ui/: index.html  server.py
Log/: OrbbecSDK.log.txt
capture/: config.py  gpio_controller.py
capture/cameras/: fov_check.py  orbbec.py
capture/pipeline/: postprocess.py  session_v2.py  uploader.py
capture/ui/: index.html  server.py
fov_stream_kit/: CMakeLists.fov_stream.txt  README (1).md  install_fov_stream.sh  orbbec_stream.cpp
install_kit_v1/: README.md  install.sh  ob_device_record_mcap_nogui.cpp
orbbec-mcap-patch/: .gitignore  APPLY_PATCH.md  README.md  apply.sh
orbbec-mcap-patch/src/media/ros/: McapReader.cpp  McapReader.hpp  McapWriter.cpp  McapWriter.hpp
systemd/: capture-daemon.service.template
v2_delivery/: CHANGES.md
v2_delivery/install_kit_v2/: CMakeLists.txt  README.md  install.sh  ob_device_record_mcap_nogui.cpp
v2_delivery/install_kit_v2/sdk_addon/2.stream.color_jpeg_stdout/: CMakeLists.txt  ob_color_jpeg_stream.cpp
